# search

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COPYRIGHT  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-and-publish.yml  ci.yaml  run-tests.yml  trigger-jenkins.yml
search/: __main__.py  app.py  config.py
search/components/: __init__.py  crud.py  es_helper.py  exceptions.py  filtering.py  models.py  pagination.py  parameters.py  schemas.py  search_query.py  sorting.py  types.py
search/components/activity_logs/: __init__.py  views.py
search/components/dataset_activity/: __init__.py  crud.py  dependencies.py  filtering.py  models.py  parameters.py  schemas.py  views.py
search/components/item_activity/: __init__.py  crud.py  dependencies.py  filtering.py  models.py  schemas.py
search/components/metadata_item/: __init__.py  crud.py  dependencies.py  filtering.py  models.py  pagination.py  parameters.py  schemas.py  types.py  views.py
search/components/metadata_items/: __init__.py  views.py
search/components/project_files/: __init__.py  parameters.py  schemas.py  views.py
search/dependencies/: __init__.py  elasticsearch.py
search/schemas/: base.py
tests/: conftest.py
tests/components/: test_es.py  test_filtering.py  test_models.py  test_parameters.py  test_sorting.py  test_types.py
tests/components/activity_logs/: test_views.py
tests/components/dataset_activity/: test_views.py
tests/fixtures/: app.py  elasticsearch.py  fake.py  jq.py
(+15 files in other folders)
